src/rubelliond/src/rebellion_bindings.rs

/* automatically generated by rust-bindgen 0.64.0 */

pub const rebellion_message_type_REBELLION_MT_REQ: rebellion_message_type = 0;
pub const rebellion_message_type_REBELLION_MT_RES: rebellion_message_type = 1;
pub const rebellion_message_type_REBELLION_MT_EV: rebellion_message_type = 2;
pub const rebellion_message_type_REBELLION_MT: rebellion_message_type = 3;
pub type rebellion_message_type = ::std::os::raw::c_uint;
pub const rebellion_message_format_REBELLION_MF_JSON: rebellion_message_format = 0;
pub const rebellion_message_format_REBELLION_MF: rebellion_message_format = 1;
pub type rebellion_message_format = ::std::os::raw::c_uint;
extern "C" {
    pub fn rebellion_message_type_str(mt: rebellion_message_type) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rebellion_message_format_str(
        mt: rebellion_message_format,
    ) -> *const ::std::os::raw::c_char;
}
pub type rebellion_rpc_callback = ::std::option::Option<
    unsafe extern "C" fn(
        mf: rebellion_message_format,
        mt: rebellion_message_type,
        data: *const u8,
        len: u32,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn rebellion(cb: rebellion_rpc_callback) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rebellion_rpc(
        mf: rebellion_message_format,
        mt: rebellion_message_type,
        udata: *const u8,
        len: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn rebellion_loop(looptime: u32) -> ::std::os::raw::c_int;
}
